# CPP_ON_RP2040

./: .gitignore  CMakeLists.txt  Readme.md  blink.c  instructions.txt  main.cpp  temp.txt
services/: MFRC522.h  MFRC522_.cpp  MFRC522_.h  lcd_i2c.cpp
